examples/test/testpolicy6560.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6560
  namespace: namespace1
spec:
  podSelector:
    matchLabels:
      key33: value46
      key7: value43
      key6: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value36
          key1: value5
          key42: value28
      podSelector:
        matchLabels:
          key24: value35
          key32: value25
